--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/image": "^0.12.1",
+    "@splidejs/splide": "^4.1.4",
     "astro": "^1.6.15",
     "sharp": "^0.31.2"
   }
